# RustSynth

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
frontend/: .pnp.cjs  bootstrap.ts  index.js  index.ts  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.ts  white_noise_processor.ts
src/: lib.rs
