[package]
name = "rust_synth"
version = "0.1.0"
authors = ["RaoulLuque <raoulsluque@gmail.com>"]
edition = "2018"
description = "A wavetable synthesizer for the web using Rust, WebAssembly and the WebAudio API"
license = "MIT"
repository = "https://github.com/RaoulLuque/RustSynth"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
